# fastapi-clean-architechture-template

./: .gitignore  LICENSE  README.md  config.py  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/api/: routing.py
src/api/v1/tasks/: controllers.py  dependencies.py  serializers.py
src/api/v1/users/: controllers.py  dependencies.py  serializers.py
src/core/common/: session.py
src/core/common/models/: base.py
src/core/common/repository/: base.py
src/core/common/utils/: build_generic_response.py
src/core/tasks/: domain.py  enums.py  exceptions.py  models.py  repository.py  service.py
src/core/users/: domain.py  exceptions.py  models.py  repository.py  service.py
