[tool.poetry]
name = "fastapi-clean-architechture-template"
version = "0.1.0"
description = ""
authors = ["daniskzn <danis.sharafiev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = "^2.0.24"
uuid7 = "^0.1.0"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
